--- a/src/include/pg_config.h.in
+++ b/src/include/pg_config.h.in
@@ -671,6 +671,9 @@
 /* Define to 1 if your libxml has xmlStructuredErrorContext. */
 #undef HAVE_XMLSTRUCTUREDERRORCONTEXT
 
+/* Define if the epoll interface is supported */
+#undef HAVE_EPOLL
+
 /* Define to the appropriate snprintf format for 64-bit ints. */
 #undef INT64_FORMAT
 
