Add mutex hint atomic ops for powerpc.
Make TAS_SPIN use mutex hint for load and reserve instruction.
POWER6 or later powerpc processors can take advantage of this hint.

--- a/configure.in
+++ b/configure.in
@@ -1563,6 +1563,7 @@ if test "$enable_nls" = yes -a "$pgac_need_repl_snprintf" = no; then
   fi
 fi
 
+PGAC_ASM_PPC_LWARX_HAVE_HINT
 
 dnl Check to see if we have a working 64-bit integer type.
 dnl This breaks down into two steps:
